# first-chat-server

./: README.md  pyproject.toml
server/: README.md  __main__.py  _test.py  chat.py  pyproject.toml  room.py  test.py
server/static/: index.html  index.js
