[tool.poetry]
name = "chat"
version = "0.1.0"
description = "Simple python chat server"
authors = ["Alekseev Aleksandr <alekseev2002@inbox.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
sanic = "*"
taskipy = "*"
ujson = "*"
loguru = "*"

[tool.poetry.dev-dependencies]

[tool.taskipy.tasks]
start = "python3 server/start.py"
test = "python3 server/test.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
